--- a/README
+++ b/README
@@ -8,3 +8,7 @@ http://switchbrew.org/index.php?title=Security_Engine
 http://switchbrew.org/index.php?title=SVC
 
 https://github.com/Atmosphere-NX/Atmosphere/blob/master/fusee/fusee-primary/src/hwinit/
+
+Presentations
+https://www.youtube.com/watch?v=Ec4NgWRE8ik
+https://switchbrew.github.io/34c3-slides/
